--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test test test"
+    "Can we accurately predict the total global sales of a game using all available features, including average user ratings and critic scores from previous titles?"
    ]
   },
   {
