Working with the project

--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -13,7 +13,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can we accurately predict the total global sales of a game using all available features, including average user ratings and critic scores from previous titles?"
+    "## Problem\n",
+    "\n",
+    "1. Can we accurately predict the global sales of a game before its release using the average of user ratings and critic ratings from previous titles?\n",
+    "2. Can we accurately predict the global sales of a game after receiving critic scores but before obtaining user ratings?\n",
+    "3. Can we accurately predict the total global sales of a game using all available features, including average user ratings and critic scores from previous titles?"
    ]
   },
   {
@@ -21,7 +25,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The problem is a regression problem, as we want to predict a numerical value based on input data."
+    "## Problem Analysis\n",
+    "\n",
+    "The problem is a regression problem, as we want to predict a numerical value based on input data.\n",
+    "\n",
+    "1. Before sale: This scenario involves predicting global sales using only the average of user ratings and critic ratings before the game's release. While it might provide a rough estimate, it may not be as accurate as using all available features. Nonetheless, this approach could still be useful in providing an early indication of the game's potential sales performance.\n",
+    "\n",
+    "2. After critic score: In this scenario, you would predict global sales after the critic scores are available but before user ratings. This approach might yield better predictions compared to the first scenario since critic scores can be a significant factor in influencing game sales.\n",
+    "\n",
+    "3. Total sale: This scenario leverages all available features, including user ratings and critic scores, to predict global sales. This approach is likely to provide the most accurate predictions since it takes into account the most information. Starting with this scenario makes sense as it allows the model to learn from the most comprehensive dataset, and later, you can experiment with the other scenarios if needed."
    ]
   },
   {
@@ -29,10 +41,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 1 for my solution:\n",
+    "## Plan for my solution:\n",
     "\n",
     "1. Cleaning data\n",
-    "2. Save the data into a new clean_games_sales\n"
+    "    a. Removing data sets with empty rows\n",
+    "2. Save the data into a new clean_games_sales.csv file\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Cleaning Data"
    ]
   },
   {
@@ -50,6 +71,14 @@
     "with open('Clean_Games_Sales_Data.csv', 'w', newline='') as outfile:\n",
     "     writer = csv.writer(outfile)\n",
     "     writer.writerows(csv_data)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cleaning is confirmed by scrolling through CSV file and comparing it to the orignal."
    ]
   },
   {
