--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -32,9 +32,7 @@
     "The problem is a regression problem, as we want to predict a numerical value based on input data.\n",
     "\n",
     "1. Before sale: This scenario involves predicting global sales using only the average of user ratings and critic ratings before the game's release. While it might provide a rough estimate, it may not be as accurate as using all available features. Nonetheless, this approach could still be useful in providing an early indication of the game's potential sales performance.\n",
-    "\n",
     "2. After critic score: In this scenario, you would predict global sales after the critic scores are available but before user ratings. This approach might yield better predictions compared to the first scenario since critic scores can be a significant factor in influencing game sales.\n",
-    "\n",
     "3. Total sale: This scenario leverages all available features, including user ratings and critic scores, to predict global sales. This approach is likely to provide the most accurate predictions since it takes into account the most information. Starting with this scenario makes sense as it allows the model to learn from the most comprehensive dataset, and later, you can experiment with the other scenarios if needed."
    ]
   },
@@ -46,7 +44,7 @@
     "## Plan for my solution:\n",
     "\n",
     "1. Cleaning data\n",
-    "    a. Removing data sets with empty rows\n",
+    "    1. Removing data sets with empty rows\n",
     "2. Save the data into a new clean_games_sales.csv file\n"
    ]
   },
