--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "## Problem Analysis\n",
     "\n",
-    "The problem is a regression problem, as we want to predict a numerical value based on input data.\n",
+    "[The problem is a regression problem, as we want to predict a numerical value based on input data.]\n",
     "\n",
     "1. Before sale: This scenario involves predicting global sales using only the average of user ratings and critic ratings before the game's release. While it might provide a rough estimate, it may not be as accurate as using all available features. Nonetheless, this approach could still be useful in providing an early indication of the game's potential sales performance.\n",
     "\n",
