--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -48,7 +48,9 @@
     "Cleaning data:\n",
     "\n",
     "1. Removing data sets with empty rows\n",
-    "2. Save the data into a new clean_games_sales.csv file\n"
+    "2. Save the data into a new clean_games_sales.csv file\n",
+    "\n",
+    "Statistical Analysis:"
    ]
   },
   {
@@ -56,7 +58,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Cleaning Data"
+    "## Step 1: Cleaning Data\n",
+    "\n",
+    "The data type is nominal (non-parametric) since it features basic names or labels as its attributes."
    ]
   },
   {
@@ -81,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The cleaning is confirmed by scrolling through CSV file and comparing it to the orignal."
+    "The cleaning is confirmed by scrolling through the CSV file and comparing it to the orignal."
    ]
   },
   {
