--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "## Plan for my solution:\n",
     "\n",
-    "Cleaning data:\n",
+    "Preparing Data:\n",
     "\n",
     "1. Removing data sets with empty rows\n",
     "2. Save the data into a new clean_games_sales.csv file\n",
@@ -58,9 +58,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Cleaning Data\n",
+    "## Step 1: Preparing the data\n",
     "\n",
-    "The data type is nominal (non-parametric) since it features basic names or labels as its attributes."
+    "- It is a structured dataset as the data is stored in a CSV file which is labeled columns.\n",
+    "- The data type is ordinal (non-parametric) since it features labels in a specific order as its attributes.\n"
    ]
   },
   {
