--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -43,12 +43,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plan for my solution:\n",
+    "# Plan for my solution:\n",
+    "\n",
+    "Analysing the Dataset:\n",
+    "\n",
+    "1. What is the Taxonomics of the Data?\n",
+    "2. What is the Data Type and its Category?\n",
     "\n",
     "Preparing Data:\n",
     "\n",
     "1. Removing data sets with empty rows\n",
     "2. Save the data into a new clean_games_sales.csv file\n",
+    "3. Validate the cleaned data\n",
     "\n",
     "Statistical Analysis:"
    ]
@@ -58,10 +64,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Preparing the data\n",
+    "# Step 1: Data Analysis\n",
     "\n",
-    "- It is a structured dataset as the data is stored in a CSV file which is labeled columns.\n",
-    "- The data type is ordinal (non-parametric) since it features labels in a specific order as its attributes.\n"
+    "## Data Taxonomics\n",
+    "\n",
+    "- It is a structured dataset as the data is stored in a CSV file with labeled columns.\n",
+    "\n",
+    "## Data Type & Category\n",
+    "\n",
+    "- The data type is ordinal (non-parametric) since it features labels in a specific order as its attributes."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 2: Preparing the data\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -86,8 +107,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[VALIDATED]\n",
+    "\n",
     "The cleaning is confirmed by scrolling through the CSV file and comparing it to the orignal."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
