--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -72,7 +72,11 @@
     "\n",
     "## Data Type & Category\n",
     "\n",
-    "- The data type is ordinal (non-parametric) since it features labels in a specific order as its attributes."
+    "- The data type is ordinal (non-parametric) since it features labels in a specific order as its attributes.\n",
+    "\n",
+    "## Preparing the Data\n",
+    "\n",
+    "- There is alot of empty rows in the data set, so these needs to be removed. "
    ]
   },
   {
