--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -117,9 +117,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Step 3: Statistical Analysis"
+   ]
   },
   {
    "cell_type": "markdown",
