--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -27,23 +27,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem Analysis\n",
-    "\n",
-    "[The problem is a regression problem, as we want to predict a numerical value based on input data.]\n",
-    "\n",
-    "1. Before sale: This scenario involves predicting global sales using only the average of user ratings and critic ratings before the game's release. While it might provide a rough estimate, it may not be as accurate as using all available features. Nonetheless, this approach could still be useful in providing an early indication of the game's potential sales performance.\n",
-    "\n",
-    "2. After critic score: In this scenario, you would predict global sales after the critic scores are available but before user ratings. This approach might yield better predictions compared to the first scenario since critic scores can be a significant factor in influencing game sales.\n",
-    "\n",
-    "3. Total sale: This scenario leverages all available features, including user ratings and critic scores, to predict global sales. This approach is likely to provide the most accurate predictions since it takes into account the most information. Starting with this scenario makes sense as it allows the model to learn from the most comprehensive dataset, and later, you can experiment with the other scenarios if needed."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Plan for my solution:\n",
+    "\n",
+    "Problem Analysis\n",
+    "\n",
+    "1. What type of problem is it?\n",
+    "2. Can we break the problem down into sub problems?\n",
+    "3. Are there anything we need to think about, when tackling the problem.\n",
     "\n",
     "Analysing the Dataset:\n",
     "\n",
@@ -64,7 +54,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 1: Data Analysis\n",
+    "# Step 1: Problem Analysis\n",
+    "\n",
+    "[The problem is a regression problem, as we want to predict a numerical value based on input data.]\n",
+    "\n",
+    "1. Before sale: This scenario involves predicting global sales using only the average of user ratings and critic ratings before the game's release. While it might provide a rough estimate, it may not be as accurate as using all available features. Nonetheless, this approach could still be useful in providing an early indication of the game's potential sales performance.\n",
+    "\n",
+    "2. After critic score: In this scenario, you would predict global sales after the critic scores are available but before user ratings. This approach might yield better predictions compared to the first scenario since critic scores can be a significant factor in influencing game sales.\n",
+    "\n",
+    "3. Total sale: This scenario leverages all available features, including user ratings and critic scores, to predict global sales. This approach is likely to provide the most accurate predictions since it takes into account the most information. Starting with this scenario makes sense as it allows the model to learn from the most comprehensive dataset, and later, you can experiment with the other scenarios if needed."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 2: Data Analysis\n",
     "\n",
     "## Data Taxonomics\n",
     "\n",
@@ -84,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 2: Preparing the data\n",
+    "# Step 3: Preparing the data\n",
     "\n",
     "\n"
    ]
@@ -121,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 3: Statistical Analysis"
+    "# Step 4: Statistical Analysis"
    ]
   },
   {
