--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -39,6 +39,7 @@
     "\n",
     "1. What is the Taxonomics of the Data?\n",
     "2. What is the Data Type and its Category?\n",
+    "3. Is there anything we need to be aware of for data cleaning?\n",
     "\n",
     "Preparing Data:\n",
     "\n",
