--- a/Tobias/StatisticAnalysisOfVideoGameData.ipynb
+++ b/Tobias/StatisticAnalysisOfVideoGameData.ipynb
@@ -872,7 +872,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -886,7 +886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2 (v3.11.2:878ead1ac1, Feb  7 2023, 10:02:41) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
