--- a/Timothy/my_research.ipynb
+++ b/Timothy/my_research.ipynb
@@ -92,8 +92,15 @@
    "metadata": {},
    "source": [
     "# Step 3: Preparing the data\n",
-    "\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Removing empty rows from the data set"
    ]
   },
   {
@@ -118,9 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[VALIDATED]\n",
-    "\n",
-    "The cleaning is confirmed by scrolling through the CSV file and comparing it to the orignal."
+    "# Step 4: Validating the Data"
    ]
   },
   {
@@ -128,8 +133,131 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 4: Statistical Analysis"
+    "## Range Checking\n",
+    "\n",
+    "I want to range check the features."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Year of Release"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum year of release: 1985\n",
+      "Maximum year of release: 2016\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the CSV file into a pandas dataframe\n",
+    "df = pd.read_csv('Clean_Games_Sales_Data.csv')\n",
+    "\n",
+    "# Find the minimum and maximum years of release\n",
+    "min_sales = df['Year_of_Release'].min()\n",
+    "max_sales = df['Year_of_Release'].max()\n",
+    "\n",
+    "# Convert the values to integers\n",
+    "min_sales = int(min_sales)\n",
+    "max_sales = int(max_sales)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Minimum year of release:\", min_sales)\n",
+    "print(\"Maximum year of release:\", max_sales)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EU Sales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum year of release: 0.0\n",
+      "Maximum year of release: 28.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the CSV file into a pandas dataframe\n",
+    "df = pd.read_csv('Clean_Games_Sales_Data.csv')\n",
+    "\n",
+    "# Find the minimum and maximum years of release\n",
+    "min_sales = df['EU_Sales'].min()\n",
+    "max_sales = df['EU_Sales'].max()\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Minimum year of release:\", min_sales)\n",
+    "print(\"Maximum year of release:\", max_sales)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.2 Boundary Checking\n",
+    "\n",
+    "I want to boundary check the features that is a number."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 5: Statistical Analysis"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I want to know what data I'm working with before using my ML model to learn on the data.\n",
+    "\n",
+    "I need to store each sample of features into an list, that can be used for the ML model.\n",
+    "\n",
+    "I need to analysise the metrics of my model, and compare it to other models I create.\n",
+    "\n",
+    "1. Overfitting (reduced accuracy and performance, increased variability, decreased interpretability)\n",
+    "2. Accuracy\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
