--- a/Tobias/Mandatory2.0.ipynb
+++ b/Tobias/Mandatory2.0.ipynb
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "cec9f952-311e-4881-8006-8d929694e5b9",
    "metadata": {
     "tags": []
@@ -2569,7 +2569,149 @@
       "Epoch 228/300\n",
       "171/171 [==============================] - 5s 30ms/step - loss: -43110864257024.0000 - mean_squared_error: 3.7851\n",
       "Epoch 229/300\n",
-      " 63/171 [==========>...................] - ETA: 3s - loss: -38954720034816.0000 - mean_squared_error: 2.0576"
+      "171/171 [==============================] - 5s 29ms/step - loss: -43782254886912.0000 - mean_squared_error: 3.7868\n",
+      "Epoch 230/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -44459924389888.0000 - mean_squared_error: 3.7846\n",
+      "Epoch 231/300\n",
+      "171/171 [==============================] - 5s 31ms/step - loss: -45144174755840.0000 - mean_squared_error: 3.7788\n",
+      "Epoch 232/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -45825405222912.0000 - mean_squared_error: 3.7780\n",
+      "Epoch 233/300\n",
+      "171/171 [==============================] - 5s 31ms/step - loss: -46515015909376.0000 - mean_squared_error: 3.7861\n",
+      "Epoch 234/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -47200818167808.0000 - mean_squared_error: 3.7809\n",
+      "Epoch 235/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -47896963579904.0000 - mean_squared_error: 3.7874\n",
+      "Epoch 236/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -48599312367616.0000 - mean_squared_error: 3.7871\n",
+      "Epoch 237/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -49319545667584.0000 - mean_squared_error: 3.7818\n",
+      "Epoch 238/300\n",
+      "171/171 [==============================] - 6s 32ms/step - loss: -50042111000576.0000 - mean_squared_error: 3.7858\n",
+      "Epoch 239/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -50773937356800.0000 - mean_squared_error: 3.7838\n",
+      "Epoch 240/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -51515318337536.0000 - mean_squared_error: 3.7839\n",
+      "Epoch 241/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -52260180590592.0000 - mean_squared_error: 3.7831\n",
+      "Epoch 242/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -53012181549056.0000 - mean_squared_error: 3.7825\n",
+      "Epoch 243/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -53766145441792.0000 - mean_squared_error: 3.7836\n",
+      "Epoch 244/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -54538815930368.0000 - mean_squared_error: 3.7824\n",
+      "Epoch 245/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -55315986907136.0000 - mean_squared_error: 3.7872\n",
+      "Epoch 246/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -56112481042432.0000 - mean_squared_error: 3.7818\n",
+      "Epoch 247/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -56923634270208.0000 - mean_squared_error: 3.7830\n",
+      "Epoch 248/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -57738948247552.0000 - mean_squared_error: 3.7835\n",
+      "Epoch 249/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -58555986083840.0000 - mean_squared_error: 3.7833\n",
+      "Epoch 250/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -59383346102272.0000 - mean_squared_error: 3.7795\n",
+      "Epoch 251/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -60229022646272.0000 - mean_squared_error: 3.7835\n",
+      "Epoch 252/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -61085415636992.0000 - mean_squared_error: 3.7835\n",
+      "Epoch 253/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -61943654121472.0000 - mean_squared_error: 3.7857\n",
+      "Epoch 254/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -62801942937600.0000 - mean_squared_error: 3.7803\n",
+      "Epoch 255/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -63667743752192.0000 - mean_squared_error: 3.7836\n",
+      "Epoch 256/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -64548769890304.0000 - mean_squared_error: 3.7799\n",
+      "Epoch 257/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -65444522229760.0000 - mean_squared_error: 3.7854\n",
+      "Epoch 258/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -66348294078464.0000 - mean_squared_error: 3.7799\n",
+      "Epoch 259/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -67267513548800.0000 - mean_squared_error: 3.7850\n",
+      "Epoch 260/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -68200154791936.0000 - mean_squared_error: 3.7823\n",
+      "Epoch 261/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -69123501457408.0000 - mean_squared_error: 3.7888\n",
+      "Epoch 262/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -70049448591360.0000 - mean_squared_error: 3.7829\n",
+      "Epoch 263/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -70984585445376.0000 - mean_squared_error: 3.7896\n",
+      "Epoch 264/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -71930669432832.0000 - mean_squared_error: 3.7833\n",
+      "Epoch 265/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -72885024587776.0000 - mean_squared_error: 3.7821\n",
+      "Epoch 266/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -73849622233088.0000 - mean_squared_error: 3.7818\n",
+      "Epoch 267/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -74816988119040.0000 - mean_squared_error: 3.7823\n",
+      "Epoch 268/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -75799579328512.0000 - mean_squared_error: 3.7871\n",
+      "Epoch 269/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -76795776860160.0000 - mean_squared_error: 3.7833\n",
+      "Epoch 270/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -77801738731520.0000 - mean_squared_error: 3.7841\n",
+      "Epoch 271/300\n",
+      "171/171 [==============================] - 5s 30ms/step - loss: -78820191240192.0000 - mean_squared_error: 3.7825\n",
+      "Epoch 272/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -79856385654784.0000 - mean_squared_error: 3.7836\n",
+      "Epoch 273/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -80891632156672.0000 - mean_squared_error: 3.7862\n",
+      "Epoch 274/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -81939084083200.0000 - mean_squared_error: 3.7798\n",
+      "Epoch 275/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -82997063712768.0000 - mean_squared_error: 3.7856\n",
+      "Epoch 276/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -84066602844160.0000 - mean_squared_error: 3.7877\n",
+      "Epoch 277/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -85156702453760.0000 - mean_squared_error: 3.7827\n",
+      "Epoch 278/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -86258118295552.0000 - mean_squared_error: 3.7821\n",
+      "Epoch 279/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -87372729417728.0000 - mean_squared_error: 3.7799\n",
+      "Epoch 280/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -88487885799424.0000 - mean_squared_error: 3.7837\n",
+      "Epoch 281/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -89609627238400.0000 - mean_squared_error: 3.7860\n",
+      "Epoch 282/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -90729137307648.0000 - mean_squared_error: 3.7831\n",
+      "Epoch 283/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -91867697905664.0000 - mean_squared_error: 3.7791\n",
+      "Epoch 284/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -93023866191872.0000 - mean_squared_error: 3.7818\n",
+      "Epoch 285/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -94179480829952.0000 - mean_squared_error: 3.7876\n",
+      "Epoch 286/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -95365026021376.0000 - mean_squared_error: 3.7834\n",
+      "Epoch 287/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -96549816238080.0000 - mean_squared_error: 3.7848\n",
+      "Epoch 288/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -97744379183104.0000 - mean_squared_error: 3.7810\n",
+      "Epoch 289/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -98954335223808.0000 - mean_squared_error: 3.7852\n",
+      "Epoch 290/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -100191067701248.0000 - mean_squared_error: 3.7837\n",
+      "Epoch 291/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -101442119532544.0000 - mean_squared_error: 3.7839\n",
+      "Epoch 292/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -102705242570752.0000 - mean_squared_error: 3.7880\n",
+      "Epoch 293/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -103975051329536.0000 - mean_squared_error: 3.7829\n",
+      "Epoch 294/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -105255530397696.0000 - mean_squared_error: 3.7822\n",
+      "Epoch 295/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -106539994054656.0000 - mean_squared_error: 3.7839\n",
+      "Epoch 296/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -107832527552512.0000 - mean_squared_error: 3.7831\n",
+      "Epoch 297/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -109144279351296.0000 - mean_squared_error: 3.7847\n",
+      "Epoch 298/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -110456651907072.0000 - mean_squared_error: 3.7795\n",
+      "Epoch 299/300\n",
+      "171/171 [==============================] - 5s 29ms/step - loss: -111780080648192.0000 - mean_squared_error: 3.7873\n",
+      "Epoch 300/300\n",
+      "171/171 [==============================] - 5s 28ms/step - loss: -113114615906304.0000 - mean_squared_error: 3.7839\n"
      ]
     }
    ],
@@ -2580,19 +2722,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "4f430900-cd9c-414e-b059-7114b0f425c4",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "171/171 [==============================] - 1s 8ms/step - loss: -113827353985024.0000 - mean_squared_error: 3.7476\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[-113827353985024.0, 3.7476136684417725]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.evaluate(video_games_features_prepared.toarray(), video_games_labels)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "f9870294-2f98-4bae-8815-2a70afc44383",
    "metadata": {
     "tags": []
@@ -2604,12 +2764,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "ef8bff82-edf8-4d85-9ee4-782c688aefef",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'History' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[70], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot([i \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(epochs)], \u001b[43mhistory\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mloss\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'History' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "plt.plot([i for i in range(epochs)], history['loss'])\n"
    ]
